# ascob-server/src/main/java/ascob/server/security/WhoAmIResponse.java
@@ -1,0 +1,17 @@
+package ascob.server.security;
+
+import java.util.List;
+
+public class WhoAmIResponse {
+
+	List<String> authorities;
+
+
+	public List<String> getAuthorities() {
+		return authorities;
+	}
+
+	public void setAuthorities(List<String> authorities) {
+		this.authorities = authorities;
+	}
+}
